--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -13,3 +13,5 @@
 @import './TextPageIntro/TextPageIntro.scss';
 @import './SeparatingLine/SeparatingLine.scss';
 @import './CartItem/CartItem.scss';
+@import './Singnin/Signin.scss';
+@import './FrameBoxImage/FrameBoxImage.scss';
