--- a/frontend/src/components/pages/Signin/Login/Login.scss
+++ b/frontend/src/components/pages/Signin/Login/Login.scss
@@ -4,6 +4,7 @@
     margin: 15px 0;
   }
   &-links {
+    margin-top: 4rem;
     width: 100%;
     @include flex(flex-start,center);
     flex-direction: column;
