--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -5,6 +5,10 @@
 @import './ProductScreen/ProductScreen.scss';
 @import './Message/Message.scss';
 @import './Cart/Cart.scss';
-@import './Signin/Signin.scss';
 @import './UserProfile/UserProfile.scss';
 @import './Shipping/Shipping.scss';
+@import './Signin/ActivationEmail/ActivationEmail.scss';
+@import './Signin/ResetPassword/ResetPassword.scss';
+@import './Signin/ForgotPassword/ForgotPassword.scss';
+@import './Signin/Login/Login.scss';
+@import './Signin/Registration/Registration.scss';
