--- a/frontend/src/components/pages/Shipping/Order/Order.scss
+++ b/frontend/src/components/pages/Shipping/Order/Order.scss
@@ -3,7 +3,7 @@
   width: 100%;
 
   &-cart {
-    max-height: 50vh;
+    max-height: 400px;
     overflow: auto;
     & .CartItem {
       padding: 1.5rem 0.5rem;
