--- a/frontend/src/components/pages/Shipping/ShippingFormControl/ShippingFormControl.scss
+++ b/frontend/src/components/pages/Shipping/ShippingFormControl/ShippingFormControl.scss
@@ -27,7 +27,7 @@
       @include flex(flex-end, center);
       width: 4rem;
       height: 3rem;
-      @include setFontStyles($main-font-bold, $rootStyleTypeColor, 2.3rem)
+      @include setFontStyles($main-font-bold, $rootStyleTypeColor, 2.3rem);
     }
   }
   &-body {
@@ -39,8 +39,22 @@
       margin: 1rem 0;
       @include setFontStyles($main-font-medium, $rootStyleTypeColor, 2rem);
     }
+    & > button {
+      margin-top: 30px;
+    }
   }
   &-body.showForm {
+    height: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes showBody {
+  form {
+    opacity: 1;
+    height: 100%;
+  }
+  to {
     opacity: 0;
     height: 0;
   }
